--- a/edu-user/edu-user-deploy.yaml
+++ b/edu-user/edu-user-deploy.yaml
@@ -30,14 +30,14 @@ spec:
             limits:
               cpu: "1"
               memory: "2Gi"
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 8080
-            initialDelaySeconds: 15
-            periodSeconds: 10
-            timeoutSeconds: 2
-            failureThreshold: 3
+#          livenessProbe:
+#            httpGet:
+#              path: /
+#              port: 8080
+#            initialDelaySeconds: 15
+#            periodSeconds: 10
+#            timeoutSeconds: 2
+#            failureThreshold: 3
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
