Chore: user ingress url 추가

--- a/edu-user/edu-user-ingress.yaml
+++ b/edu-user/edu-user-ingress.yaml
@@ -16,3 +16,10 @@ spec:
                 name: edu-user-svc
                 port:
                   number: 80
+          - path: /api/v1/user(/|$)(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: edu-user-svc
+                port:
+                  number: 80
