--- a/edu-goods/edu-goods-deploy.yaml
+++ b/edu-goods/edu-goods-deploy.yaml
@@ -17,8 +17,8 @@ spec:
     spec:
       containers:
         - name: edu-goods
-          image: adelacho/k8s-exam-goods:v0.0.3
-          imagePullPolicy: IfNotPresent
+          image: adelacho/k8s-exam-goods:v0.0.4
+          imagePullPolicy: Always
           ports:
             - name: http
               containerPort: 8080
